syntax = "proto3";

import "google/protobuf/timestamp.proto";

package car_service;

message ServiceTask {
  int32 id = 1;
  int32 order_id = 2;
  string description = 3;
  double labor_cost = 4;
  google.protobuf.Timestamp created_at = 5;
}
